--- a/Student-showcase/assets/css/my-projects.css
+++ b/Student-showcase/assets/css/my-projects.css
@@ -152,3 +152,18 @@ h2 {
     from { opacity: 0; transform: scale(0.9); }
     to { opacity: 1; transform: scale(1); }
 }
+
+.close-btn {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    background-color: #f44336;
+    color: white;
+    border: none;
+    font-size: 24px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    z-index: 1000;
+}
