--- a/Student-showcase/assets/css/about.css
+++ b/Student-showcase/assets/css/about.css
@@ -8,12 +8,12 @@
 body {
   background-color: #081b29;
   color: #fff;
-  padding: 40px;
+  padding: 20px;
 }
 
 .about {
   width: 100%;
-  padding: 90px 0px;
+  padding: 80px 0px;
   background-color: #0b1f33;
 }
 
@@ -83,43 +83,53 @@ button:hover {
   color: #0ef;
 }
 
-/* Responsive */
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .main {
     flex-direction: column;
     text-align: center;
   }
 
   .main img {
-    margin-right: 0;
-    margin-bottom: 30px;
-    width: 80%;
+    margin: 0 0 30px 0;
+    width: 100%;
+    max-width: 400px;
   }
 
   .about-text {
-    width: 90%;
+    width: 100%;
+    padding: 0 20px;
   }
 
   .about-text h1 {
-    font-size: 60px;
-  }
-}
-
-@media (max-width: 480px) {
-  .about-text h1 {
-    font-size: 45px;
-  }
-
-  .about-text h5 {
-    font-size: 20px;
+    font-size: 50px;
   }
 
   .about-text p {
     font-size: 16px;
+    line-height: 26px;
   }
 }
 
-/* Header */
+@media (max-width: 576px) {
+  .about-text h1 {
+    font-size: 36px;
+  }
+
+  .about-text h5 {
+    font-size: 16px;
+  }
+
+  .about-text p {
+    font-size: 15px;
+    line-height: 24px;
+  }
+
+  button {
+    padding: 10px 24px;
+    font-size: 15px;
+  }
+}
+
 header h1,
 h1 {
   text-align: center;
@@ -129,7 +139,6 @@ h1 {
   padding-top: 20px;
 }
 
-/* Team container */
 .container {
   max-width: 1200px;
   width: 95%;
@@ -141,7 +150,6 @@ h1 {
   padding: 0 20px 40px;
 }
 
-/* Team card */
 .card {
   width: 280px;
   background: #1a2c3a;
